Ajustes no menu, página 404 e na página inicial. Ajustes no arquivo CSS para as páginas de erro e 404.

--- a/Gestao_PetShop/src/main/resources/templates/error/404.html
+++ b/Gestao_PetShop/src/main/resources/templates/error/404.html
@@ -19,7 +19,7 @@
 			<h2 class="textoErro">Ooops, nos desculpem, mas não encontramos
 				a página que você está procurando!!</h2>
 		</div>
-		<img alt="" th:src="@{/images/pets.png}">
+		<img class="img-fluid" alt="" th:src="@{/images/pets.png}">
 	</div>
 </body>
 </html>
