--- a/Gestao_PetShop/src/main/resources/templates/layout/fragments/menu.html
+++ b/Gestao_PetShop/src/main/resources/templates/layout/fragments/menu.html
@@ -52,7 +52,7 @@
     					</a>
 						<div class="collapse" id="menu1sub1">
 							<a href="/" class="list-group-item" data-parent="#menu1sub1">
-								Subitem	1 a
+								Tela Inicial
 							</a>
 							<a href="#" class="list-group-item" data-parent="#menu1sub1">Subitem
 								2 b</a> <a href="#menu1sub1sub1" class="list-group-item"
