--- a/Gestao_PetShop/src/main/resources/templates/layout/layout.html
+++ b/Gestao_PetShop/src/main/resources/templates/layout/layout.html
@@ -8,6 +8,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+<link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}">
+
 <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">Gestão PetShop</title>
 
 <link th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" rel="stylesheet" />
