Inclusão do arquivo JavaScritp Jquery.maskMoney.min.js. Acertar a entrada de dados de valores monetários com a Jquery MaskMoney na classe Produto. Corrigir o icone relativo a pesquisa de fornecedores.

--- a/Gestao_PetShop/src/main/resources/templates/fornecedores/lista-fornecedor-e-produtos.html
+++ b/Gestao_PetShop/src/main/resources/templates/fornecedores/lista-fornecedor-e-produtos.html
@@ -124,10 +124,10 @@
 							<td class="text-center" th:text="${produto.qtd}">qtd</td>
 
 							<td class="text-center"
-								th:text="${produto.convertValorToMoney(produto.valorCompra)}">valorcompra</td>
+								th:text="'R$ ' + ${produto.valorCompra}">valorcompra</td>
 
 							<td class="text-center"
-								th:text="${produto.convertValorToMoney(produto.valorVenda)}">valorvenda</td>
+								th:text="'R$ ' + ${produto.valorVenda}">valorvenda</td>
 
 							<td class="text-center" th:text="${produto.lote}">lote</td>
 
