--- a/Gestao_PetShop/src/main/resources/templates/layout/fragments/menu.html
+++ b/Gestao_PetShop/src/main/resources/templates/layout/fragments/menu.html
@@ -132,7 +132,7 @@
 							<span class="d-none d-md-inline">Consultas</span>
     					</a>
 						<a href="/fornecedores" class="list-group-item" sec:authorize="hasRole('PS_ADMIN')">
-							<i class="fas fa-clipboard"></i>
+							<i class="fas fa-industry"></i>
 							<span class="d-none d-md-inline">Fornecedores</span>
     					</a>
 					</div>
