Inclusão das mensagens de Sucesso e de Erro por páginas especificas, assim deixando o código das páginas de cadastro e listagem mais limpos e organizados.

--- a/Gestao_PetShop/src/main/resources/templates/atendimento/cliente/lista-cliente-e-animais.html
+++ b/Gestao_PetShop/src/main/resources/templates/atendimento/cliente/lista-cliente-e-animais.html
@@ -15,11 +15,7 @@
 			Cliente: <span class="text-primary" th:text="${cliente.nome}"></span>
 		</h1>
 		
-		<div class="alert  alert-success"
-			th:if="${!#strings.isEmpty(mensagem)}">
-			<i class="fa fa-check-circle"></i>
-			<span th:text="${mensagem}">Mensagem sucesso!</span>
-		</div>
+		<th:block th:insert="layout/fragments/MensagemGeral :: sucesso"></th:block>
 		
 			<input type="hidden" th:field="*{id}" />
 			
