--- a/Gestao_PetShop/src/main/resources/templates/atendimento/consulta/lista-consultas.html
+++ b/Gestao_PetShop/src/main/resources/templates/atendimento/consulta/lista-consultas.html
@@ -15,11 +15,8 @@
 			<i class="fas fa-list"></i>Consultas
 		</h1>
 
-		<div class="alert  alert-success"
-			th:if="${!#strings.isEmpty(mensagem)}">
-			<i class="fa fa-check-circle"></i> <span th:text="${mensagem}">Mensagem
-				sucesso!</span>
-		</div>
+		<th:block th:insert="layout/fragments/MensagemGeral :: sucesso"></th:block>
+		
 		<div class="form-row">
 			<div class="table-responsive-sm col-sm-12">
 				<table id="tabela-produtos"
