--- a/Gestao_PetShop/src/main/resources/templates/atendimento/servico/cadastro-servicos.html
+++ b/Gestao_PetShop/src/main/resources/templates/atendimento/servico/cadastro-servicos.html
@@ -15,30 +15,15 @@
 			<h1 class="titulo-formulario">
 				<i class="fa fa-cart-arrow-down"></i>Cadastro de Serviço
 			</h1>
+			
+			<th:block th:insert="layout/fragments/MensagemGeral :: sucesso"></th:block>
 
 			<form name="formulario" method="POST"
 				class="form-vertical  js-form-loading" th:object="${servico}"
 				th:action="@{/atendimento/servicos/salvar}">
 
-				<div class="alert  alert-danger  alert-dismissible" role="alert"
-					th:if="${#fields.hasAnyErrors()}">
-					<button type="button" class="close" data-dismiss="alert"
-						aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-
-					<div th:each="erro: ${#fields.detailedErrors()}">
-						<i class="fa fa-exclamation-circle"></i> <span
-							th:text="${erro.message}">Mensagem erro.</span>
-					</div>
-				</div>
-
-				<div class="alert  alert-success"
-					th:if="${!#strings.isEmpty(mensagem)}">
-					<i class="fa fa-check-circle"></i> <span th:text="${mensagem}">Mensagem
-						sucesso!</span>
-				</div>
-
+				<th:block th:insert="layout/fragments/MensagemErro :: erro"></th:block>
+				
 				<input type="hidden" th:field="*{id}" />
 
 				<div class="form-row">
