--- a/Gestao_PetShop/src/main/resources/templates/atendimento/cliente/cadastro-cliente.html
+++ b/Gestao_PetShop/src/main/resources/templates/atendimento/cliente/cadastro-cliente.html
@@ -26,27 +26,12 @@
 		
 			<h1 class="titulo-formulario"><i class="fas fa-user-plus"></i>Cadastro de cliente</h1>
 			
+			<th:block th:insert="layout/fragments/MensagemGeral :: sucesso"></th:block>
+			
 			<form method="POST" class="form-vertical  js-form-loading"
 				th:object="${cliente}" th:action="@{/atendimento/clientes/salvar}">
 				
-				<div class="alert  alert-danger  alert-dismissible" role="alert"
-					th:if="${#fields.hasAnyErrors()}">
-					<button type="button" class="close" data-dismiss="alert"
-						aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-
-					<div th:each="erro: ${#fields.detailedErrors()}">
-						<i class="fa fa-exclamation-circle"></i>
-						<span th:text="${erro.message}">Mensagem erro.</span>
-					</div>
-				</div>
-
-				<div class="alert  alert-success"
-					th:if="${!#strings.isEmpty(mensagem)}">
-					<i class="fa fa-check-circle"></i>
-					<span th:text="${mensagem}">Mensagem sucesso!</span>
-				</div>
+				<th:block th:insert="layout/fragments/MensagemErro :: erro"></th:block>
 
 				<input type="hidden" th:field="*{id}" />
 				<input type="hidden" th:field="*{endereco}" />
