--- a/Gestao_PetShop/src/main/resources/templates/atendimento/consulta/cadastro-consulta.html
+++ b/Gestao_PetShop/src/main/resources/templates/atendimento/consulta/cadastro-consulta.html
@@ -12,28 +12,13 @@
 			<h1 class="titulo-formulario"><i class="fas fa-notes-medical"></i>
 				Cadastro de consulta para o animal: <span class="text-primary" th:text="${consulta.animal.nome}"></span>
 			</h1>
+			
+			<th:block th:insert="layout/fragments/MensagemGeral :: sucesso"></th:block>
 
 			<form name="formulario" method="POST" class="form-vertical  js-form-loading"
 				th:object="${consulta}" th:action="@{/atendimento/consultas/agendar}">
 				
-				<div class="alert  alert-danger  alert-dismissible" role="alert"
-					th:if="${#fields.hasAnyErrors()}">
-					<button type="button" class="close" data-dismiss="alert"
-						aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-
-					<div th:each="erro: ${#fields.detailedErrors()}">
-						<i class="fa fa-exclamation-circle"></i> <span
-							th:text="${erro.message}">Mensagem erro.</span>
-					</div>
-				</div>
-
-				<div class="alert  alert-success"
-					th:if="${!#strings.isEmpty(mensagem)}">
-					<i class="fa fa-check-circle"></i> <span th:text="${mensagem}">Mensagem
-						sucesso!</span>
-				</div>
+				<th:block th:insert="layout/fragments/MensagemErro :: erro"></th:block>
     			
 				<input type="hidden" th:field="*{codigo}" />
 				<input type="hidden" th:field="*{animal}" />
