--- a/Gestao_PetShop/src/main/resources/templates/fornecedores/lista-fornecedores.html
+++ b/Gestao_PetShop/src/main/resources/templates/fornecedores/lista-fornecedores.html
@@ -15,11 +15,8 @@
 			<i class="fas fa-list"></i>Fornecedores
 		</h1>
 
-		<div class="alert  alert-success"
-			th:if="${!#strings.isEmpty(mensagem)}">
-			<i class="fa fa-check-circle"></i> <span th:text="${mensagem}">Mensagem
-				sucesso!</span>
-		</div>
+		<th:block th:insert="layout/fragments/MensagemGeral :: sucesso"></th:block>
+		
 		<div class="form-row">
 			<div class="pesquisa">
 				<form method="GET" class="form-inline" action="/fornecedores"
