Ajuste na mascara para dados do tipo BigDecimal. Ajuste no texto de mensagem de sucesso no cadastro e alteração de uma consulta.

--- a/Gestao_PetShop/src/main/resources/templates/produtos/cadastro-produto.html
+++ b/Gestao_PetShop/src/main/resources/templates/produtos/cadastro-produto.html
@@ -15,13 +15,13 @@
 	<section layout:fragment="content">
 	
 	<script type="text/javascript">
-		$(function() {
-			var decimal = $('.js-decimal');
-			decimal.maskMoney();
-			
-			var plain = $('.js-plain');
-			plain.maskMoney({ precision: 0 });
-		});
+	$(function() {
+		var decimal = $('.js-decimal');
+		decimal.maskMoney({ decimal: ',', thousands: '.' });
+		
+		var plain = $('.js-plain');
+		plain.maskMoney({ precision: 0, thousands: '.' });
+	});
 	</script>
 		<div class="layout-pagina">
 
