Unificação dos filtros das pesquisas pela classe FiltroGeral. Alteração das classes de Controller e páginas de listagem para utilizar o FiltroGeral. Exclusão das classes de Filtro não utilizadas mais.

--- a/Gestao_PetShop/src/main/resources/templates/animais/lista-animais.html
+++ b/Gestao_PetShop/src/main/resources/templates/animais/lista-animais.html
@@ -28,7 +28,7 @@
 				<div class="input-group col-sm-4">
 					<input class="form-control"
 						placeholder="Qual animal você está procurando?"
-						autofocus="autofocus" th:field="*{nome}"></input>
+						autofocus="autofocus" th:field="*{textoFiltro}"></input>
 					<div class="input-group-append">
 						<button type="submit" class="btn btn-default">
 							<i class="fas fa-search"></i>
