--- a/Gestao_PetShop/src/main/resources/templates/atendimento/cliente/lista-clientes-inativos.html
+++ b/Gestao_PetShop/src/main/resources/templates/atendimento/cliente/lista-clientes-inativos.html
@@ -21,7 +21,7 @@
 						<div class="input-group">
 							<input class="form-control"
 								placeholder="Qual cliente você está procurando?"
-								autofocus="autofocus" th:field="*{nome}"></input>
+								autofocus="autofocus" th:field="*{textoFiltro}"></input>
 							<div class="input-group-append">
 								<button type="submit" class="btn btn-default">
 									<i class="fas fa-search"></i>
