--- a/Gestao_PetShop/src/main/resources/templates/fornecedores/lista-fornecedor-e-produtos.html
+++ b/Gestao_PetShop/src/main/resources/templates/fornecedores/lista-fornecedor-e-produtos.html
@@ -85,7 +85,7 @@
 					<div class="input-group">
 						<input class="form-control"
 							placeholder="Qual produto você está procurando?"
-							autofocus="autofocus" th:field="*{descricao}">
+							autofocus="autofocus" th:field="*{textoFiltro}">
 						<div class="input-group-append">
 							<button type="submit" class="btn btn-default">
 								<i class="fas fa-search"></i>
