--- a/Gestao_PetShop/src/main/resources/templates/fornecedores/lista-fornecedores.html
+++ b/Gestao_PetShop/src/main/resources/templates/fornecedores/lista-fornecedores.html
@@ -24,7 +24,7 @@
 					<div class="input-group">
 						<input class="form-control"
 							placeholder="Qual fornecedor você está procurando?"
-							autofocus="autofocus" th:field="*{nome}">
+							autofocus="autofocus" th:field="*{textoFiltro}">
 						<div class="input-group-append">
 							<button type="submit" class="btn btn-default">
 								<i class="fas fa-search"></i>
