--- a/Gestao_PetShop/src/main/resources/templates/produtos/lista-produtos.html
+++ b/Gestao_PetShop/src/main/resources/templates/produtos/lista-produtos.html
@@ -25,7 +25,7 @@
 						<div class="input-group col-sm-4">
 							<input class="form-control"
 								placeholder="Qual produto você está procurando?"
-								autofocus="autofocus" th:field="*{descricao}">
+								autofocus="autofocus" th:field="*{textoFiltro}">
 							<div class="input-group-append">
 								<button type="submit" class="btn btn-default">
 									<i class="fas fa-search"></i>
