Inclusão das classes, arquivos e páginas para inclusão, alteração e pesquisa de Raças e Espécies. Alteração das páginas de cadastro e pesquisa de Animal para permitir o cadastro e a alteração da Raça/Espécie diretamente do cadastro de animal.

--- a/Gestao_PetShop/src/main/resources/templates/administracao/usuario/lista-usuarios.html
+++ b/Gestao_PetShop/src/main/resources/templates/administracao/usuario/lista-usuarios.html
@@ -22,7 +22,7 @@
 				<form method="GET" class="form-inline" action="/administracao/usuarios" th:object="${filtro}">
 						<div class="input-group col-sm-4">
 							<input class="form-control"	placeholder="Qual usuário você está procurando?"
-									autofocus="autofocus" th:field="*{textoFiltro}">
+									autofocus="autofocus" th:field="*{nome}">
 							<div class="input-group-append">
 								<button type="submit" class="btn btn-default">
 									<i class="fas fa-search"></i>
