--- a/Gestao_PetShop/src/main/resources/templates/atendimento/cliente/lista-clientes.html
+++ b/Gestao_PetShop/src/main/resources/templates/atendimento/cliente/lista-clientes.html
@@ -23,7 +23,7 @@
 		<div class="form-row col-sm-6">
 			<div class="pesquisa">
 				<form method="GET" class="form-inline"
-					action="/atendimento/clientes/inativos" th:object="${filtro}">
+					action="/atendimento/clientes" th:object="${filtro}">
 					<div class="input-group">
 						<input class="form-control"
 							placeholder="Qual cliente você está procurando?"
