--- a/Gestao_PetShop/src/main/resources/templates/animais/lista-animais.html
+++ b/Gestao_PetShop/src/main/resources/templates/animais/lista-animais.html
@@ -65,9 +65,9 @@
 
 							<td th:text="${animal.getDataFormatada(animal.data_nasc)}">data_nasc</td>
 
-							<td th:text="${animal.raca}">raca</td>
+							<td th:text="${animal.raca.nome}">raca</td>
 
-							<td th:text="${animal.especie}">especie</td>
+							<td th:text="${animal.raca.especie}">especie</td>
 
 							<td th:text="${animal.getPedigree()}">pedigree</td>
 
