--- a/Gestao_PetShop/src/main/resources/static/css/estilo_IridiumIT.css
+++ b/Gestao_PetShop/src/main/resources/static/css/estilo_IridiumIT.css
@@ -148,3 +148,22 @@
 	padding-top: 0;
 	line-height: 1;
 }
+
+/*
+##############################################
+# Campo com botão para ativar formulário Modal
+##############################################
+*/
+.bw-glyphicon-large {
+	font-size: 18px;
+}
+
+/* Field Action */
+.bw-field-action {
+	display: flex;
+}
+
+.bw-field-action__icon {
+	margin: 6px 0 0 5px;
+}
+
