Concentração e organização das funções JavaScrit nos arquivos iridiumit.js e mascaras.js. Ajustes nas páginas de cadastro para permitir a leitura das funções JavaScript desses dois arquivos.

--- a/Gestao_PetShop/src/main/resources/templates/atendimento/servico/cadastro-servicos.html
+++ b/Gestao_PetShop/src/main/resources/templates/atendimento/servico/cadastro-servicos.html
@@ -4,7 +4,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout/layout}">
 <head>
-	<title>Cadastro de Serviçs</title>
+	<title>Cadastro de Serviços</title>
 	<script th:src="@{/javascripts/jquery.mask.min.js}"></script>
 	<script th:src="@{/js/mascaras.js}"></script>
 </head>
