--- a/Gestao_PetShop/src/main/resources/templates/administracao/usuario/cadastro-usuario.html
+++ b/Gestao_PetShop/src/main/resources/templates/administracao/usuario/cadastro-usuario.html
@@ -5,29 +5,14 @@
 	layout:decorate="~{layout/layout}">
 <head>
 <title>Cadastro de Usuários</title>
-<script th:src="@{/js/BuscaCEP.js}"></script>
-		<script th:src="@{/js/jquery.mask.min.js}"></script>
-		<script th:src="@{/webjars/jquery.inputmask/4.0.5/jquery.inputmask.bundle.js}"></script>
-		<script th:src="@{/js/mascaras.js}"></script>
-		<script type="text/javascript">
-			$(document).ready(function() {
-		
-				$(".fone").inputmask({
-					mask : [ "(99) 9999-9999", "(99) 99999-9999", ],
-					keepStatic : true
-				});
+	<script th:src="@{/js/BuscaCEP.js}"></script>
+	<script th:src="@{/js/jquery.mask.min.js}"></script>
 	
-			});
-		</script>
-		
-		<script type="text/javascript">
-			function preencher_cpf(el)
-			{
-				document.getElementById('senha').value = el.value.replace(/\D/g, '');
-				document.getElementById('login').value = el.value.replace(/\D/g, '');
-			}
-		</script>
+	<script th:src="@{/webjars/jquery.inputmask/4.0.5/jquery.inputmask.bundle.js}"></script>
 	
+	<script th:src="@{/js/mascaras.js}"></script>
+	
+	<script th:src="@{/js/iridiumit.js}"></script>
 </head>
 
 <body>
