--- a/Gestao_PetShop/src/main/resources/templates/administracao/usuario/editar-usuario.html
+++ b/Gestao_PetShop/src/main/resources/templates/administracao/usuario/editar-usuario.html
@@ -4,19 +4,13 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout/layout}">
 <head>
+	<title>Editar Usuário</title>
 	<script th:src="@{/js/BuscaCEP.js}"></script>
-	<script th:src="@{/javascripts/jquery.mask.min.js}"></script>
-	<script th:src="@{/webjars/jquery.inputmask/4.0.5/jquery.inputmask.bundle.js}"></script>
-	<script type="text/javascript">
-		$(document).ready(function() {
+	<script th:src="@{/js/jquery.mask.min.js}"></script>
 	
-			$(".fone").inputmask({
-				mask : [ "(99) 9999-9999", "(99) 99999-9999", ],
-				keepStatic : true
-			});
-
-		});
-	</script>
+	<script th:src="@{/webjars/jquery.inputmask/4.0.5/jquery.inputmask.bundle.js}"></script>
+	
+	<script th:src="@{/js/mascaras.js}"></script>
 </head>
 
 <body>
