Correção da informação Réptil na lista de espécies

--- a/Gestao_PetShop/src/main/resources/templates/raca/cadastro-raca_especie.html
+++ b/Gestao_PetShop/src/main/resources/templates/raca/cadastro-raca_especie.html
@@ -45,7 +45,7 @@
 							<option value="Felino">Felino</option>
 							<option value="Mamífero">Mamífero</option>
 							<option value="Peixe">Peixe</option>
-							<option value="Reptel">Réptel</option>
+							<option value="Réptel">Réptel</option>
 						</select>
 					</div>
 				</div>
