Exclusão de classe não utilizada, DISCO.java Inclusão dos itens de relatório no menu. Exclusão de itens não utilizados no menu. Inclusão de métodos para ativação e desativação de Usuários. Inclusão de botão para re-ativação de usuário na lista de usuários.

--- a/Gestao_PetShop/src/main/resources/static/css/sidenav.css
+++ b/Gestao_PetShop/src/main/resources/static/css/sidenav.css
@@ -28,6 +28,10 @@
     padding-right: 5px;
 }
 
+#sidebar a i {
+    padding-right: 5px;
+}
+
 #sidebar .list-group-item {
     border-radius: 0;
     background-color: #484848;
