--- a/Gestao_PetShop/src/main/resources/static/css/estilo_IridiumIT.css
+++ b/Gestao_PetShop/src/main/resources/static/css/estilo_IridiumIT.css
@@ -167,3 +167,25 @@
 	margin: 6px 0 0 5px;
 }
 
+.btn-foto {
+	padding: .20rem .5rem;
+	font-size: .775rem;
+	line-height: 1.3;
+	border-radius: .2rem;
+}
+
+/*
+################################################
+# Formatação das imagens antes de carregar
+################################################
+*/
+
+.image_upload_preview {
+	max-width: 100px;
+	max-height: 100px;
+}
+
+.foto_animal_listagem{
+	max-width: 60px;
+	max-height: 60px;
+}
