Espaçamento maior entre o titulo das listas e a linha de borda

--- a/Gestao_PetShop/src/main/resources/static/css/estilo_IridiumIT.css
+++ b/Gestao_PetShop/src/main/resources/static/css/estilo_IridiumIT.css
@@ -101,6 +101,7 @@
 .titulo-formulario {
 	margin: 0;
 	margin-bottom: 10px;
+	padding-bottom: 5px;
 	border-bottom: 1px solid #ccc;
 	font-size: 1.2rem;
 	font-weight: normal;
