Utilização do banco de dados do Heroku com aplicação local

--- a/Gestao_PetShop/src/main/resources/templates/layout/layout.html
+++ b/Gestao_PetShop/src/main/resources/templates/layout/layout.html
@@ -16,7 +16,7 @@
 <link th:href="@{/webjars/font-awesome/5.10.1/css/all.css}" rel="stylesheet" />
 
 <link th:href="@{/css/sidenav.css}" rel="stylesheet" />
-<link href="https://cdn.statically.io/gh/Atanes/Arquivos_Estaticos/35e7ff4/css/estilo_IridiumIT.css" rel="stylesheet"/>
+<link th:href="@{/css/estilo_IridiumIT.css}" rel="stylesheet"/>
 
 <script th:src="@{/webjars/jquery/3.3.1/jquery.js}"></script>
 <script th:src="@{/webjars/popper.js/1.14.3/popper.min.js}"></script>
